Fixed broken layout on the privacy policy

--- a/styles.scss
+++ b/styles.scss
@@ -1046,17 +1046,17 @@ footer {
 		--tint: #6BD7FF;
 	}
 	
-	h3 {
+	.featuregrid h3 {
 		color: var(--main);
 		font-size: 28px;
 	}
 	
 	@media (min-width: 768px) {
-		h3 {
+		.featuregrid h3 {
 			text-align: center;
 		}
 	
-		p {
+		.featuregrid p {
 			text-align: center;
 		}
 		
@@ -1108,6 +1108,12 @@ footer {
 	@media (max-width: 767px) {
 		.videoWrapper {
 			order: -1;
+		}
+	}
+	
+	&.privacy-page {
+		p {
+			opacity: 1;
 		}
 	}
 }
